--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
             - TWITTER_USERNAME
             - TWITTER_PASSWORD
             - TWITTER_EMAIL
+            - POST_INTERVAL_MIN
+            - POST_INTERVAL_MAX
             - X_SERVER_URL=https://api.red-pill.ai/v1
             - BIRDEYE_API_KEY=
             - SOL_ADDRESS=So11111111111111111111111111111111111111112
